# How_to_Use_CudaTracerLib_on_Linux_Like_OS

./: CMakeLists.txt  CornellBox.sh  Greenbig.sh  Makefile  README.md  cornellbox_Water.sh  cornellbox_sphere.sh  cudatracerlib.ini
Data/Greeble_big/: Greeble_big.mtl
Data/cornellbox/: cornellbox.mtl
scenes/: cornellbox.sh  cornellbox_empty_squashed.sh  cornellbox_glossy.sh  cornellbox_glossy_floor.sh  cornellbox_sphere.sh  cornellbox_water.sh
scenes/Data/Compiled/: cornellbox.xmsh
scenes/Data/cornellbox/: sky.exr
src/Core/: App.cpp  App.h  Common.h  Precompiled.h
src/Math/: MovingAverage.cu  MovingAverage.h
src/Runners/: ConsoleRunner.cpp  ConsoleRunner.h
src/Utils/: CudaUtils.cpp  CudaUtils.h  Log.cpp  Log.h  Log.inl  Settings.cpp  Settings.h  StringUtils.cpp  StringUtils.h  SysUtils.cpp  SysUtils.h  Timer.cpp  Timer.h
src/core/: common.h  cudautils.cpp  log.cpp  log.h  movingaverage.cpp  movingaverage.h  precompiled.h  settings.cpp  settings.h  stringutils.cpp  stringutils.h  timer.cpp  timer.h
src/main/: HostExample.cpp  app.cpp  app.h  consolerunner.cpp  consolerunner.h  hostexample.cpp
src/misc/: sky01.exr  sky_white.exr
